--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "@vercel/kv": "^1.0.1"
   },
   "keywords": [],
   "author": "",
